--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -10,8 +10,8 @@ MIZ = $(patsubst %, %.miz, $(MMLLAR))
 
 ECHO=/bin/echo
 
-dep-tag = "DEP   "
-evl-tag = "EVL   "
+dep-tag = "    DEP   "
+evl-tag = "    EVL   "
 
 .SECONDARY: $(patsubst %, %.evl, $(MMLLAR)) # don't auto-delete intermediate .dep files
 
@@ -19,9 +19,9 @@ deps: $(DEP-MAKEFILES)
 evls: $(EVL-FILES)
 
 %.evl: %.miz
-	@$(ECHO) '   ' $(evl-tag) $*;
+	@$(ECHO) $(evl-tag) $*;
 	@envget $*.miz > /dev/null 2> /dev/null;
 
 %.dep: %.evl
-	@$(ECHO) '   ' $(dep-tag) $*;
+	@$(ECHO) $(dep-tag) $*;
 	@xsltproc ../xsl/evl2dep.xsl $*.evl | ../.perl/duplicates.pl > $*.dep;
