Generate index.html after making all the htmls.

--- a/Makefile.repo
+++ b/Makefile.repo
@@ -71,6 +71,7 @@ absrefs: $(patsubst %, %-absrefs.xml, $(MMLLAR))
 	  xsl/addabsrefs.xsl mml/$*.xmlvrf
 
 htmls: $(patsubst %, %.html, $(MMLLAR))
+	.perl/mkmmlindex.pl mml/*.hdr > html/index.html
 
 %.html: %-absrefs.xml %.hdr
 	@$(ECHO) $(html-tag) $*
